@@ -17,6 +17,7 @@
 * MaxiPago: add void and refund [shasum]
 * MaxiPago: Allow processor_id override [duff]
 * Stripe: Interpret string input to store method as token identifier [bizla]
+* MaxiPago: Add verify and scrub [shasum]
 
 
 == Version 1.59.0 (May 18, 2016)
